# mavis-calibration

./: .copier-answers.yml  .gitignore  404.html  LICENSE.md  README.md  Snakefile  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  targets.txt  tox.ini
.github/workflows/: deploy_docs.yml  testing.yml
docs/: index.md
search/: search_index.json
site/: 404.html  index.html
src/mavis_calibration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/results/: GS_ThAr_Blue_900s_01_1dspec_cal_fluxes.csv  GS_ThAr_Red_10s_01_1dspec_cal_fluxes.csv  GS_ThAr_Red_60s_01_1dspec_cal_fluxes.csv  GS_ThAr_Red_60s_02_1dspec_cal_fluxes.csv  GS_ThAr_Red_60s_03_1dspec_cal_fluxes.csv  GS_ThAr_Red_60s_04_1dspec_cal_fluxes.csv  GS_ThAr_Red_60s_05_1dspec_cal_fluxes.csv  GS_ThAr_Red_60s_06_1dspec_cal_fluxes.csv  GS_ThAr_Red_60s_07_1dspec_cal_fluxes.csv  GS_ThAr_Red_60s_08_1dspec_cal_fluxes.csv  GS_ThAr_Red_60s_09_1dspec_cal_fluxes.csv  GS_ThAr_Red_60s_10_1dspec_cal_fluxes.csv  Newport_Ar_Blue_600s_01_1dspec_cal_fluxes.csv  Newport_Ar_Red_10s_01_1dspec_cal_fluxes.csv  Newport_Ar_Red_60s_01_1dspec_cal_fluxes.csv  Newport_Ar_Red_60s_02_1dspec_cal_fluxes.csv  Newport_Ar_Red_60s_03_1dspec_cal_fluxes.csv  Newport_Ar_Red_60s_04_1dspec_cal_fluxes.csv  Newport_Ar_Red_60s_05_1dspec_cal_fluxes.csv  Newport_Ar_Red_60s_06_1dspec_cal_fluxes.csv  Newport_Ar_Red_60s_07_1dspec_cal_fluxes.csv  Newport_Ar_Red_60s_08_1dspec_cal_fluxes.csv  Newport_Ar_Red_60s_09_1dspec_cal_fluxes.csv  (+57 more)
tests/: test_apply_wavelength_calibration.py  test_measure_fluxes.py  test_save_1d_spec.py
(+19 files in other folders)
