[project]
name = "mavis-calibration"
description = "Some tests for the MAVIS team using Hector calibration lamps"
version = "1.0.0"
authors = [
    { name = "Sam Vaughan", email = "sam.vaughan@mq.edu.au" }
]
dependencies = [
    "numpy",
    "astropy",
    "matplotlib",
    "pandas"

]

[project.optional-dependencies]
dev = [
    "tox"
]